# sl-assessment

./: README.md
StreamLabsConsoleApp/: CMakeLists.txt  StreamLabsConsoleApp.sln
StreamLabsConsoleApp/StreamLabsClient/: CMakeLists.txt  ClientUI.cpp  DummyClassClientImpl.cpp  DummyClassClientImpl.h  ServerAccess.cpp  ServerAccess.h  StreamLabsClient.cpp  StreamLabsClient.h  StreamLabsClient.vcxproj  StreamLabsClient.vcxproj.filters
StreamLabsConsoleApp/StreamLabsCommon/: CMakeLists.txt  CustomClass.cpp  DummyClass.cpp  DummyClassServerImpl.cpp  Request.cpp  Response.cpp  StreamLabsCommon.vcxproj  StreamLabsCommon.vcxproj.filters
StreamLabsConsoleApp/StreamLabsCommon/include/: Constants.h  CustomClass.h  DummyClass.h  Request.h  Response.h  StreamLabsExeption.h
StreamLabsConsoleApp/StreamLabsConsoleApp/: StreamLabsConsoleApp.cpp  StreamLabsConsoleApp.vcxproj  StreamLabsConsoleApp.vcxproj.filters
StreamLabsConsoleApp/StreamLabsServer/: AsyncServer.cpp  CMakeLists.txt  Client.h  CustomClass.cpp  DummyClassServerImpl.cpp  DummyClassServerImpl.h  ServerUI.cpp  StreamLabsServer.cpp  StreamLabsServer.h  StreamLabsServer.vcxproj  StreamLabsServer.vcxproj.filters
